padre display column

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         transition: all .3s;
     }
 
-    .animation .deleted:active {
+    .animation>*:active {
         background-color: blueviolet;
-        width: 0px;
+        height: 0px;
     }
 </style>
 
