--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     .animation {
-        background-color: aquamarine;
+        background-color: rgb(150, 127, 255);
         display: flex;
         flex-direction: column;
         transition: all .3s;
